--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -308,6 +308,8 @@
 <div class="content" role="main">
   <h2>Angular 14 - Crud - Authentication-Material UI</h2>
   <app-home></app-home>
+  <app-contact></app-contact>
+  <app-about></app-about>
 </div>
 
 <router-outlet></router-outlet>
