--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -310,6 +310,7 @@
   <app-home></app-home>
   <app-contact></app-contact>
   <app-about></app-about>
+  <app-status></app-status>
 </div>
 
 <router-outlet></router-outlet>
