--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -311,6 +311,7 @@
   <app-contact></app-contact>
   <app-about></app-about>
   <app-status></app-status>
+  <app-login></app-login>
 </div>
 
 <router-outlet></router-outlet>
