--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
   <span>Welcome</span>
   <div class="spacer"></div>
 
-  <a>Home</a>
-  <a>About Us</a>
-  <a>Contact</a>
+  <a routerLink="home">Home</a>
+  <a routerLink="about">About Us</a>
+  <a routerLink="contact">Contact</a>
 </div>
 
 <div class="content" role="main">
