--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,6 @@
 </div>
 
 <div class="content" role="main">
+  <!-- Bunu eklemezsek routerLink çalışmaz -->
   <router-outlet></router-outlet>
 </div>
