added addcontact comp

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,5 +15,5 @@
 
 <div class="content" role="main">
   <!-- Bunu eklemezsek routerLink çalışmaz -->
-  <router-outlet></router-outlet>
+  <!-- <router-outlet></router-outlet> -->
 </div>
