--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
   <a routerLink="contact">Contact</a>
   <div class="spacer"></div>
 
-  <a routerLink="register">Register</a>
+  <a routerLink="access/register">Register</a>
 </div>
 
 <div class="content" role="main">
