upd material module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   <a routerLink="about">About Us</a>
   <a routerLink="contact">Contact</a>
   <div class="spacer"></div>
-
+  <a routerLink="login">Login</a>
   <a routerLink="access/register">Register</a>
 </div>
 
