--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,2 +1,4 @@
-<p>login works!</p>
-<mat-card>Simple card</mat-card>
+<h2>User Login</h2>
+<mat-card>
+  <mat-card-title> </mat-card-title>
+</mat-card>
