added forms module

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-title>User Login </mat-card-title>
   <mat-card-content>
-    <form>
+    <form #loginForm="ngForm">
       <mat-form-field appearance="fill">
         <mat-label>Username</mat-label>
         <input
