--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,7 +26,13 @@
       </mat-form-field>
       <div>
         <button mat-raised-button color="primary" type="submit">Login</button>
-        <a mat-raised-button color="accent" style="margin: 5px">Register</a>
+        <a
+          mat-raised-button
+          color="accent"
+          style="margin: 5px"
+          (click)="redirectRegister()"
+          >Register</a
+        >
       </div>
     </form>
   </mat-card-content>
