upd resgister comp

--- a/src/app/access/register/register.component.html
+++ b/src/app/access/register/register.component.html
@@ -1,25 +1,31 @@
 <mat-card>
   <mat-card-title>User Registeration </mat-card-title>
   <mat-card-content>
-    <form>
+    <!-- formGroup u kulllanabilmek için ReactiveFormsModule ü import etmeyi unutma -->
+    <form (ngSubmit)="saveUser()" [formGroup]="reactiveform">
       <mat-form-field appearance="fill">
         <mat-label>User ID</mat-label>
-        <input matInput placeholder="UserID" />
+        <input matInput placeholder="ID" formControlName="userid" />
       </mat-form-field>
 
       <mat-form-field appearance="fill">
         <mat-label>Username</mat-label>
-        <input matInput placeholder="Username" />
+        <input matInput placeholder="Username" formControlName="username" />
       </mat-form-field>
 
       <mat-form-field appearance="fill">
         <mat-label>Password</mat-label>
-        <input matInput placeholder="Password" type="password" />
+        <input
+          matInput
+          placeholder="Password"
+          type="password"
+          formControlName="password"
+        />
       </mat-form-field>
 
       <mat-form-field appearance="fill">
         <mat-label>Email</mat-label>
-        <input matInput placeholder="Email" />
+        <input matInput placeholder="Email" formControlName="email" />
       </mat-form-field>
 
       <div>
