added register methods

--- a/src/app/access/register/register.component.html
+++ b/src/app/access/register/register.component.html
@@ -10,7 +10,7 @@
 
       <mat-form-field appearance="fill">
         <mat-label>Username</mat-label>
-        <input matInput placeholder="Username" formControlName="username" />
+        <input matInput placeholder="Username" formControlName="name" />
       </mat-form-field>
 
       <mat-form-field appearance="fill">
