--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,8 @@
   <a routerLink="home">Home</a>
   <a routerLink="about">About Us</a>
   <a routerLink="contact">Contact</a>
+  <a routerLink="user">User</a>
+
   <div class="spacer"></div>
   <a routerLink="login">Login</a>
   <a routerLink="access/register">Register</a>
