--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -20,9 +20,9 @@
     </ng-container>
 
     <!-- Is Active Column -->
-    <ng-container matColumnDef="isactive">
+    <ng-container matColumnDef="isActive">
       <th mat-header-cell *matHeaderCellDef>Is Active</th>
-      <td mat-cell *matCellDef="let element">{{ element.isactive }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.isActive }}</td>
     </ng-container>
 
     <!-- Role Column -->
