--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -21,14 +21,26 @@
 
     <!-- Is Active Column -->
     <ng-container matColumnDef="isActive">
-      <th mat-header-cell *matHeaderCellDef>Is Active</th>
-      <td mat-cell *matCellDef="let element">{{ element.isActive }}</td>
+      <th mat-header-cell *matHeaderCellDef>Status</th>
+      <td mat-cell *matCellDef="let element">
+        <span *ngIf="element.isActive">Active</span>
+        <span *ngIf="!element.isActive">In Active</span>
+      </td>
     </ng-container>
 
     <!-- Role Column -->
     <ng-container matColumnDef="role">
       <th mat-header-cell *matHeaderCellDef>Role</th>
       <td mat-cell *matCellDef="let element">{{ element.role }}</td>
+    </ng-container>
+
+    <!-- Action Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-raised-button color="primary">Change</button>
+        <button mat-raised-button color="accent">Delete</button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
