--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -48,9 +48,10 @@
   </table>
   <mat-paginator
     [length]="100"
-    [pageSize]="10"
-    [pageSizeOptions]="[5, 10, 25, 100]"
+    [pageSize]="5"
+    [pageSizeOptions]="[3, 5, 10, 25, 100]"
     aria-label="Select page"
   >
   </mat-paginator>
 </div>
+,
