--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -38,8 +38,20 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let element">
-        <button mat-raised-button color="primary">Change</button>
-        <button mat-raised-button color="accent">Delete</button>
+        <button
+          mat-raised-button
+          color="primary"
+          (click)="updateUser(element.userid)"
+        >
+          Change
+        </button>
+        <button
+          mat-raised-button
+          color="accent"
+          (click)="deleteUser(element.userid)"
+        >
+          Delete
+        </button>
       </td>
     </ng-container>
 
