--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,6 @@
-<div class="table-div; mat-elevation-z8">
+<div style="width: 1200px" class="mat-elevation-z8">
   <h2>User Details</h2>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource">
     <!-- User ID Column -->
     <ng-container matColumnDef="userid">
       <th mat-header-cell *matHeaderCellDef>UserId</th>
@@ -66,4 +66,3 @@
   >
   </mat-paginator>
 </div>
-,
