--- a/src/app/modal-popup/modal-popup.component.html
+++ b/src/app/modal-popup/modal-popup.component.html
@@ -1,1 +1,21 @@
-<p>modal-popup works!</p>
+<h2>Update User</h2>
+<h4>Basic mat-select</h4>
+<mat-form-field appearance="fill">
+  <mat-label>Role</mat-label>
+  <mat-select>
+    <!-- <mat-option *ngFor="let food of foods" [value]="food.value">
+      {{food.viewValue}}
+    </mat-option> -->
+  </mat-select>
+</mat-form-field>
+
+<div>
+  <section class="section">
+    <mat-checkbox class="margin">Is Active</mat-checkbox>
+  </section>
+</div>
+
+<div>
+  <button mat-raised-button color="primary">Change</button>
+  <button mat-raised-button color="accent">Close</button>
+</div>
