--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -39,18 +39,21 @@
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let element">
         <button
-          mat-raised-button
           color="primary"
+          mat-icon-button
+          aria-label="Change"
           (click)="updateUser(element.userid)"
         >
-          Change
+          <mat-icon>edit</mat-icon>
         </button>
+
         <button
-          mat-raised-button
-          color="accent"
+          color="warn"
+          mat-icon-button
+          aria-label="Delete"
           (click)="deleteUser(element.userid)"
         >
-          Delete
+          <mat-icon>delete</mat-icon>
         </button>
       </td>
     </ng-container>
