updated dialog btn

--- a/src/app/modal-popup/modal-popup.component.css
+++ b/src/app/modal-popup/modal-popup.component.css
@@ -8,3 +8,12 @@
 .margin {
   margin: 0 12px;
 }
+
+.end-button {
+  display: flex;
+  justify-content: end;
+}
+
+.spacer {
+  margin-right: 5px;
+}
