--- a/src/app/modal-popup/modal-popup.component.html
+++ b/src/app/modal-popup/modal-popup.component.html
@@ -15,7 +15,7 @@
   </section>
 </div>
 
-<div>
-  <button mat-raised-button color="primary">Change</button>
+<div class="end-button">
+  <button mat-raised-button color="primary" class="spacer">Change</button>
   <button mat-raised-button color="accent">Close</button>
 </div>
